--- a/apps/site/src/components/common/ProjectCard/ProjectCard.astro
+++ b/apps/site/src/components/common/ProjectCard/ProjectCard.astro
@@ -20,7 +20,7 @@ const image = await getImageByPath(project.data.hero.src, project.data.hero.alt,
     class={cn(
         'relative flex h-full w-full flex-col overflow-hidden rounded-2xl',
         'bg-radial-[at_15%_15%]',
-        'text-on-surface from-surface-container-high to-surface-container-highest',
+        'text-on-surface from-surface-container-low/60 to-surface-container/60 backdrop-blur-md',
         'shadow-2xl transition-all duration-300',
     )}
 >
