--- a/apps/site/src/components/widgets/Home/About/About.astro
+++ b/apps/site/src/components/widgets/Home/About/About.astro
@@ -1,7 +1,5 @@
 ---
-function cn(arg0: string, className: string): string {
-    throw new Error('Function not implemented.');
-}
+import { cn } from '@helpers/cn';
 
 export interface Props {
     className?: string;
