--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -8,7 +8,8 @@ import MetaTags from '@common/MetaTags.astro';
 import { getInitialTheme, applyTheme } from '@helpers/getInitialTheme';
 
 import type { MetaSEO } from 'types/metaseo';
-import { config } from '@config.js';
+// TODO - DEFAULT SEO CONFIG
+// import { config } from '@config.js';
 
 import '@styles/theme.css';
 import Footer from '@widgets/Footer.astro';
