feat: refactor project components and improve image handling

--- a/apps/site/src/components/common/ProjectCard/ProjectCard.astro
+++ b/apps/site/src/components/common/ProjectCard/ProjectCard.astro
@@ -9,10 +9,7 @@ interface Props {
 
 const { project }: Props = Astro.props;
 
-const image = await getImageByPath(project.data.hero.src, project.data.hero.alt, {
-    width: 800,
-    height: 600,
-});
+const image = await getImageByPath(project.data.hero.src, {width: 800, height: 600});
 
 ---
 
@@ -25,22 +22,20 @@ const image = await getImageByPath(project.data.hero.src, project.data.hero.alt,
     )}
 >
     {
-        (
-            <img
-                src={image.src}
-                width={image.attributes.width}
-                height={image.attributes.height}
+        image?.src && <img
+                src={image?.src}
+                width={image?.attributes.width}
+                height={image?.attributes.height}
                 class='w-full h-auto max-h-60 aspect-[3/2] object-cover object-top'
             />
-        )
     }
     <header class='p-4'>
         <h4 class=''><a href={'/projects/' + project.slug}>{project.data.title}</a></h4>
         <h5 class=''>{project.data.subtitle}</h5>
         <hr class='p-2 border-sw-neutral-500/50' />
-        <p class=''>Categoria: {project.data.category}</p>
-        <p class=''>Tecnologias: {project.data.tags.join(', ')}</p>
+        <p class=''>Categorias: {project.data.categories?.join(', ') ?? 'N/A'}</p>
+        <p class=''>Tags: {project.data.tags?.join(', ') ?? 'N/A'}</p>
+        <p class=''>Frameworks: {project.data.frameworks?.join(', ') ?? 'N/A'}</p>
         <p class=''>Data: {project.data.date}</p>
-        <p class=''>{project.data.summary}</p>
     </header>
 </article>
