--- a/apps/site/src/pages/projects/[slug].astro
+++ b/apps/site/src/pages/projects/[slug].astro
@@ -1,8 +1,11 @@
 ---
 import { marked } from 'marked';
 
-import { getAllProjects } from '@helpers/projectHelpers';
 import Layout from '@layouts/PageLayout.astro';
+import {Hero} from '@widgets/Project/Project.astro';
+
+import { getAllProjects } from '@helpers/projectHelpers';
+import {getImageMetadataByPath} from '@helpers/getImageMetadataByPath';
 
 export async function getStaticPaths() {
     const processedProjects = await getAllProjects();
@@ -13,18 +16,25 @@ export async function getStaticPaths() {
     }));
 }
 
-
 const { project } = Astro.props;
 
 const content = project.data.content;
 const html =await marked.parse(content);
+
+const heroImageMetadata = getImageMetadataByPath(project.data.hero.src);
 ---
 
 <Layout meta={{ title: project.data.title }}>
+    {heroImageMetadata && (
+        <Hero
+            mobileImagePath={heroImageMetadata}
+            desktopImagePath={heroImageMetadata}
+        />
+    )}
     <div class='sw-container py-8 flex-col'>
         <h1>{project.data.title}</h1>
         <h5 class=''>{project.data.subtitle}</h5>
-        <p class=''>Categoria: {project.data.category}</p>
+        <p class=''>Categorias: {project.data.categories.join(', ')}</p>
         <p class=''>Tecnologias: {project.data.tags.join(', ')}</p>
         <p class=''>Data: {project.data.date}</p>
         <p class=''>Resumo: {project.data.summary}</p>
