Refactor icon components and DividerWave component

--- a/apps/site/src/components/common/DividerWave.astro
+++ b/apps/site/src/components/common/DividerWave.astro
@@ -4,6 +4,7 @@ export interface Props {
 }
 
 const { ...props } = Astro.props as Props;
+// TODO: add some animations when scrolling / using the mouse
 ---
 
 <div {...props}>
