--- a/apps/site/src/components/widgets/Home/Team/Team.astro
+++ b/apps/site/src/components/widgets/Home/Team/Team.astro
@@ -1,7 +1,7 @@
 ---
 import TeamCard from '@common/TeamCard';
 import { cn } from '@helpers/cn';
-import { getAllTeamMembers, type ProcessedTeamMember } from '@helpers/teamHelpers';
+import { getAllTeamMembers, type ProcessedTeamMember } from '@helpers/collections/teamHelpers';
 
 export interface Props {
     className?: string;
@@ -10,18 +10,13 @@ export interface Props {
 const { className } = Astro.props as Props;
 
 const teamMembers: ProcessedTeamMember[] = await getAllTeamMembers();
-
 ---
 
-<div class={cn('grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-24 text-justify my-16', className)}>
+<div class={cn('grid auto-rows-fr grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-24 text-justify my-16', className)}>
     {teamMembers.map((member) => (
         <TeamCard
             client:visible
-            name={member.data.name}
-            roles={member.data.roles || []}
-            skills={member.data.skills || []}
-            links={member.data.links || []}
-            photoSrc={member.data.photo?.src || '/images/placeholder.png'}
+            teamMember={member}
         />
     ))}
 </div>
