feat: update icon imports in ButtonToggleMenu and ButtonToggleTheme; fix type import in MetaTags; remove unused SimpleCarousel component

--- a/apps/site/src/components/common/ButtonToggleMenu.astro
+++ b/apps/site/src/components/common/ButtonToggleMenu.astro
@@ -1,5 +1,5 @@
 ---
-import { IconMenu } from '@icons/MenuIcon';
+import { Menu } from '@icons/UI';
 ---
 
 <button
@@ -8,7 +8,7 @@ import { IconMenu } from '@icons/MenuIcon';
     class='rounded-lg text-sm inline-flex items-center relative text-white'
     data-toggle-menu
 >
-    <IconMenu className='w-6 h-6' />
+    <Menu className='w-6 h-6' />
 </button>
 
 <script is:inline>
