--- a/apps/site/src/components/common/MetaTags.astro
+++ b/apps/site/src/components/common/MetaTags.astro
@@ -1,7 +1,7 @@
 ---
 import { SEO } from 'astro-seo';
 
-import type { MetaSEO } from 'types/metaseo';
+import type { MetaSEO } from 'types/metaSEO';
 import { config } from '@config.js';
 
 const {
