feat: update icon imports and refactor layout in various components; fix type import for MetaSEO

--- a/apps/site/src/components/widgets/Header.astro
+++ b/apps/site/src/components/widgets/Header.astro
@@ -1,6 +1,6 @@
 ---
 import ButtonToggleTheme from '@common/ButtonToggleTheme';
-import { SiteLogo } from '@icons/SiteLogo';
+import { SiteLogo } from '@icons/Brand';
 
 import { cn } from '@helpers/cn';
 
