--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@
 import MetaTags from '@common/MetaTags.astro';
 import { getInitialTheme, applyTheme } from '@helpers/getInitialTheme';
 
-import type { MetaSEO } from 'types/metaseo';
+import type { MetaSEO } from 'types/metaSEO';
 // TODO - DEFAULT SEO CONFIG
 // import { config } from '@config.js';
 
