--- a/apps/site/src/layouts/PageLayout.astro
+++ b/apps/site/src/layouts/PageLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
 
-import type { MetaSEO } from 'types/metaseo';
+import type { MetaSEO } from 'types/metaSEO';
 
 type Props = {
     meta?: MetaSEO;
