--- a/apps/site/src/pages/projects/index.astro
+++ b/apps/site/src/pages/projects/index.astro
@@ -3,7 +3,7 @@ import Layout from '@layouts/PageLayout.astro';
 import { Gallery } from '@widgets/Portfolio/Portfolio.astro';
 
 import { config } from '@config.js';
-import type { MetaSEO } from 'types/metaseo';
+import type { MetaSEO } from 'types/metaSEO';
 
 const meta: MetaSEO = {
     title: config.title,
