--- a/apps/site/src/components/widgets/Home/Contact/Contact.astro
+++ b/apps/site/src/components/widgets/Home/Contact/Contact.astro
@@ -25,7 +25,7 @@ const { className } = Astro.props as Props;
         title='Cosmonaut suit'
         alt='Russian cosmonaut space suit in museum.'
     />
-            <div class='grid grid-cols-1 gap-4 lg:gap-8'>
+            <div class='grid auto-rows-fr grid-cols-1 gap-4 lg:gap-8'>
                 <div class='p-2 flex flex-wrap gap-4'>
                     <div class='flex flex-row gap-4 items-center'>
                         <div class='w-16 h-16 p-2 rounded-lg bg-sw-navy'>
