--- a/apps/site/src/components/widgets/Portfolio/Gallery/Gallery.astro
+++ b/apps/site/src/components/widgets/Portfolio/Gallery/Gallery.astro
@@ -17,6 +17,6 @@ export interface Props {
 const { className } = Astro.props as Props;
 ---
 
-<div class={cn('grid grid-cols-1 md:grid-cols-3 gap-8', className)}>
+<div class={cn('grid auto-rows-fr grid-cols-1 md:grid-cols-3 gap-8', className)}>
     {projects.map((project: ProcessedProject) => <ProjectCard project={project} />)}
 </div>
