--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from '@layouts/PageLayout.astro';
 
-import type { MetaSEO } from 'types/metaseo';
+import type { MetaSEO } from 'types/metaSEO';
 import { config } from '@config.js';
 
 import { Hero, Products, Team, Contact } from '@widgets/Home/Home.astro';
-import { SiteIcon } from '@icons/SiteIcon';
+import { SiteStar } from '@icons/Brand';
 
 const meta: MetaSEO = {
     title: config.title,
@@ -19,7 +19,7 @@ const meta: MetaSEO = {
 
 <Layout {meta}>
     <Hero />
-    <div class='relative flex flex-col bg-surface-bright z-10'>
+    <div class='relative flex flex-col bg-surface-bright z-10  overflow-x-hidden'>
 
         <section class='flex flex-col w-full md:sticky top-0 py-24'>
             <div class='sw-container flex flex-col space-y-10 z-10'>
@@ -49,7 +49,7 @@ const meta: MetaSEO = {
 
         <section class='sw-halftone relative w-full bg-surface-dim py-12 text-primary'>
             <div class='sw-container flex flex-row mx-auto space-y-10'>
-                <div class='grid grid-cols-1 md:grid-cols-2'>
+                <div class='grid auto-rows-fr grid-cols-1 md:grid-cols-2'>
                     <div class='flex flex-col space-y-4'>
                         <header class='flex flex-col space-y-2'>
                             <h2 class='uppercase text-on-surface'>Sobre nós</h2>
@@ -70,7 +70,7 @@ const meta: MetaSEO = {
                     <figure
                         class='flex flex-row justify-center md:justify-end items-center text-on-surface fill-on-surface'
                     >
-                        <SiteIcon className='w-32 h-32' />
+                        <SiteStar className='w-32 h-32' />
                     </figure>
                 </div>
             </div>
