--- a/apps/site/src/components/widgets/Portfolio/Gallery/Gallery.astro
+++ b/apps/site/src/components/widgets/Portfolio/Gallery/Gallery.astro
@@ -1,6 +1,6 @@
 ---
 import ProjectCard from '@common/ProjectCard/ProjectCard.astro';
-import { getAllProjects, type ProcessedProject } from '@helpers/projectHelpers';
+import { getAllProjects, type ProcessedProject } from '@helpers/collections/projectHelpers';
 import { cn } from '@helpers/cn';
 
 const projects = await getAllProjects('pt');
