--- a/apps/site/src/pages/projects/index.astro
+++ b/apps/site/src/pages/projects/index.astro
@@ -8,7 +8,7 @@ import type { MetaSEO } from 'types/metaSEO';
 const meta: MetaSEO = {
     title: config.title,
     description: config.description,
-    canonical: Astro.url.toString(),
+    // canonical: Astro.url.toString(),
     og: {
         type: 'website',
     },
