--- a/apps/site/src/components/widgets/Portfolio/Portfolio.astro
+++ b/apps/site/src/components/widgets/Portfolio/Portfolio.astro
@@ -1,5 +1,5 @@
 ---
-import Gallery from './Gallery/Gallery.astro';
+import Gallery from './ProjectsGallery/ProjectsGallery.astro';
 
 export { Gallery };
 ---
