--- a/apps/site/src/components/widgets/Home/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Home/Hero/Hero.astro
@@ -2,7 +2,7 @@
 import heroImageMobile from '/public/images/hero_sm.png';
 import heroImageDesktop from '/public/images/hero_md.png';
 import DividerWave from '@common/DividerWave.astro';
-import { cn } from '@helpers/cn';
+import { cn } from '@lib/utils';
 
 export interface Props {
     className?: string;
