--- a/apps/site/src/components/widgets/Home/Products/Products.astro
+++ b/apps/site/src/components/widgets/Home/Products/Products.astro
@@ -1,8 +1,8 @@
 ---
 import { ProductGallery } from '@common/ProductGallery';
-import { cn } from '@helpers/cn';
+import { cn } from '@lib/utils';
 
-import { getAllProducts, type ProcessedProduct } from '@helpers/collections/productHelpers';
+import { getAllProducts, type ProcessedProduct } from '@lib/collections/productHelpers';
 
 export interface Props {
     className?: string;
