--- a/apps/site/src/components/widgets/Home/Team/Team.astro
+++ b/apps/site/src/components/widgets/Home/Team/Team.astro
@@ -1,7 +1,7 @@
 ---
 import TeamCard from '@common/TeamCard';
-import { cn } from '@helpers/cn';
-import { getAllTeamMembers, type ProcessedTeamMember } from '@helpers/collections/teamHelpers';
+import { cn } from '@lib/utils';
+import { getAllTeamMembers, type ProcessedTeamMember } from '@lib/collections/teamHelpers';
 
 export interface Props {
     className?: string;
