--- a/apps/site/src/components/widgets/Project/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Project/Hero/Hero.astro
@@ -2,7 +2,7 @@
 import { getImage } from 'astro:assets';
 import type { ImageMetadata } from 'astro';
 
-import { cn } from '@helpers/cn';
+import { cn } from '@lib/utils';
 
 export interface Props {
     mobileImagePath: ImageMetadata;
