--- a/apps/site/src/components/common/Badges/Badge.astro
+++ b/apps/site/src/components/common/Badges/Badge.astro
@@ -1,6 +1,6 @@
 ---
 import type { Platform, Framework, Tag, Category } from 'src/schemas/categorySchema';
-import { cn } from '@helpers/cn';
+import { cn } from '@lib/utils';
 
 function isPlatform(category: Category): category is Platform {
   return typeof (category as Platform).abbreviation === 'string';
