--- a/apps/site/src/components/widgets/Header.astro
+++ b/apps/site/src/components/widgets/Header.astro
@@ -2,7 +2,7 @@
 import ButtonToggleTheme from '@common/ButtonToggleTheme';
 import { SiteLogo } from '@icons/Brand';
 
-import { cn } from '@helpers/cn';
+import { cn } from '@lib/utils';
 
 export interface Props {
     className?: string;
