refactor: update import paths from '@helpers' to '@lib' for consistency

--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@
 // import '@styles/text.scss';
 
 import MetaTags from '@common/MetaTags.astro';
-import { getInitialTheme, applyTheme } from '@helpers/getInitialTheme';
+import { getInitialTheme, applyTheme } from '@lib/getInitialTheme';
 
 import type { MetaSEO } from 'types/metaSEO';
 // TODO - DEFAULT SEO CONFIG
