--- a/apps/site/src/pages/design_system.astro
+++ b/apps/site/src/pages/design_system.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@layouts/PageLayout.astro';
-import { cn } from '@helpers/cn';
+import { cn } from '@lib/utils';
 
 // Define the color components
 const ColorBox = ({ bg, text, className }) => {
