por algum motivo o overflow-x-hidden faz o sticky dos filhos não funcionar

--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -19,7 +19,7 @@ const meta: MetaSEO = {
 
 <Layout {meta}>
     <Hero />
-    <div class='relative flex flex-col bg-surface-bright z-10  overflow-x-hidden'>
+    <div class='relative flex flex-col bg-surface-bright z-10'>
 
         <section class='flex flex-col w-full md:sticky top-0 py-24'>
             <div class='sw-container flex flex-col space-y-10 z-10'>
