--- a/apps/site/src/pages/projects/index.astro
+++ b/apps/site/src/pages/projects/index.astro
@@ -21,7 +21,7 @@ const meta: MetaSEO = {
             <div class='flex flex-col py-8 space-y-4'>
                 <header class='flex flex-col space-y-2'>
                     <h2 class='uppercase text-on-surface'>Projetos</h2>
-                    <h3 class='sw-animation sw-pulse sw-to-b from-primary to-accent'>Um gostinho do que fazemos</h3>
+                    <h3 class='sw-pulse from-primary to-accent'>Um gostinho do que fazemos</h3>
                 </header>
                 <Projects />
             </div>
